--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 <table class="imgtable"><tbody>
 <tr>
-<td width="30%"><img src="./figures/qay.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
+<td width="35%"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
 <td align="left" style="padding-left:40px">
 <b>About me:</b><br>
 <p>I am a Ph.D. candidate in <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> at Computer Science Department of <a href="http://en.whu.edu.cn/">Wuhan University</a>.</p>
@@ -79,10 +79,9 @@ Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <h2>Research Interests</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, matching, scene understanding and deep learning.</p>
-<p>
-Currently, I am interested in the problem of matching, as I think it is a relevant element in order to densely and accurately represent and reconstruct challenging 3D scenes, such as dynamic objects, feature-less shapes and the vegetation.</p> 
-<p>I am also interested in the application of deep learning in 3D field, such as semantic shape analysis and scene recovery. 
+<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, SLAM, matching and scene understanding.</p>
+
+<p>I am also interested in the application of deep learning in 3D vision, such as semantic shape analysis and scene recovery. 
 </p>
 </td></tr></tbody></table>
 
