--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ I am now looking for a Postdoc/Researcher position in computer vision and graphi
 <p>
 Email: <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a> | <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
 Office: Room B501, Computer School, Wuhan University, China, 430072<br>
-Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
+Links: <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
 <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
 <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
 <br>
@@ -79,9 +79,9 @@ Links: <a href="https://github.com/yanqingan" target="_blank">Github</a> |
 <h2>Research Interests</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, SLAM, matching and scene understanding.</p>
+<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, SLAM, image matching and understanding.</p>
 
-<p>I am also interested in the application of deep learning in 3D vision, such as semantic shape analysis and scene recovery. 
+<p>I am also interested in the application of deep learning within 3D vision, such as semantic shape and scene analysis.
 </p>
 </td></tr></tbody></table>
 
