--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 </div>
 <table class="imgtable"><tbody>
 <tr>
-<td width="35%"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
+<!-- <article> is necessary or the display will be incorrect in different browses -->>
+<td width="35%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
 <td align="left" style="padding-left:40px">
 <b>About me:</b><br>
 <p>I am a Ph.D. candidate in <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> at Computer Science Department of <a href="http://en.whu.edu.cn/">Wuhan University</a>.</p>
