--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 <table class="imgtable"><tbody>
 <tr>
-<!-- <article> is necessary or the display will be incorrect in different browses -->>
+<!-- <article> is necessary or the display will be incorrect in different browses -->
 <td width="35%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
 <td align="left" style="padding-left:40px">
 <b>About me:</b><br>
