--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="Qingan Yan" content="Homepage">
 
@@ -55,37 +55,43 @@
 <table class="imgtable"><tbody>
 <tr>
 <td width="35%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
-<td align="left" style="padding-left:40px">
-<b>About me:</b><br>
-<p>I am a Ph.D. candidate in <a href="http://graphvision.whu.edu.cn/">Graphics and Vision Lab</a> at Computer Science Department of <a href="http://en.whu.edu.cn/">Wuhan University</a>.</p>
+<td width="25%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
+<td align="left" style="padding-left:60px">
+    <p>
+        <span style="font-family:Helvetica">
+            <b>
+                Ph.D.
+                <br>Computer Vision Engineer
+                <br>JD.com Silicon Valley Research Center
+            </b>
+        </span>
+    </p>
 <p>
-<b>Available for hire (<i>in 2017</i>):</b><br>
-I am now looking for a Postdoc/Researcher position in computer vision and graphics. Please feel free to contact me if you are interested in my background or work.
-</p>
-<b>Contact Info:</b><br>
-<p>
-Email: <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a> | <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
-Office: Room B501, Computer School, Wuhan University, China, 430072<br>
-Links: <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
-<a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
-<a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
-<br>
+    <span style="font-family:Helvetica">
+        <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a> | <a href="mailto:qingan.yan@jd.com">qingan.yan@jd.com</a><br>
+        <b>Office:</b> 2900 Lakeside Dr, Santa Clara, California, 95054<br>
+        <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
+        <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
+        <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
+        <br>
+    </span>
 </p>
 <p class="simple15"  style="padding-top:8px">
 <a href="./docs/Qingan_Yan_PhD_WHU_CV.pdf" style="font-family:verdana" class="btn btn-default btn-sm" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <b><u>Curriculum Vitae</u></b></a>&nbsp;
 </p>
 </td></tr></tbody></table>
 
-<h2>Research Interests</h2>
+<h2>Short Bio</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-<p>My work lies in the field of computer vision and graphics. In particular, I tackle the challenges in 3D reconstruction, structure from motion, SLAM, image matching and understanding.</p>
-
-<p>I am also interested in the application of deep learning within 3D vision, such as semantic shape and scene analysis.
-</p>
+    <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Santa Clara. Before that, I got my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a> in 2017, 
+    under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
+    <p>My research interests lies in the field of computer vision and graphics. In particular, I tackle the challenges in structure from motion, SLAM, multi-view stereo, RGBD fusion and image understanding.
+    I also focus on the application of deep learning within 3D vision, such as semantic shape recovery and scene analysis.</p>
+    <p>If you are interested in collaboration with me, please feel free to send me an email at <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a>.</p>
 </td></tr></tbody></table>
 
-<h2>Papers</h2>
+<h2>Publications</h2>
 
 <table class="imgtable"><tbody>
 <tr>
@@ -98,7 +104,7 @@ Links: <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
 	<p>Ling Zhang, <b>Qingan Yan</b>, Zheng Liu, Hua Zou and Chunxia Xiao<br>
 	<i>IEEE Transactions on Image Processing <b>(TIP)</b>. (To appear in 2017) </i></p>
 <p style="padding-top:10px">
-
+    <!--<a href="./docs/tip17_.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;-->
 </p>
 </li>
 </ul>
@@ -115,7 +121,7 @@ Links: <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
 <td align="left">
 <ul>
 	<li><p><a href="./docs/cvpr17_distinguishing.pdf" class="text-black"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></a> <img src="./figures/new_animated.gif" \=""></p>
-	<p><b>Qingan Yan</b>, Long Yang and Chunxia Xiao<br>
+	<p><b>Qingan Yan</b>, Long Yang, Ling Zhang and Chunxia Xiao<br>
 	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2017. (Spotlight) </i></p>
 <p style="padding-top:10px">
 <a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
@@ -247,7 +253,7 @@ Links: <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
 
 <div id="footer">
 <div id="footer-text">
-<p style="color:#527bbd">Last updated on May-06-2017 by Qingan Yan.</p>
+<p style="color:#527bbd">Last updated on Dec-04-2017 by Qingan Yan.</p>
 </div>
 </div>
 </div>
