--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 <h2>Short Bio</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-    <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Santa Clara. Before that, I got my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a> in 2017, 
+    <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Santa Clara. Before that, I got my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a> in July 2017, 
     under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
-    <p>My research interests lies in the field of computer vision and graphics. In particular, I tackle the challenges in structure from motion, SLAM, multi-view stereo, RGBD fusion and image understanding.
-    I also focus on the application of deep learning within 3D vision, such as semantic shape recovery and scene analysis.</p>
+    <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, SLAM, image and RGBD data analysis. 
+    I am also interested in the application of deep learning within 3D field, such as semantic shape understanding and scene recovery.</p>
     <p>If you are interested in collaboration with me, please feel free to send me an email at <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a>.</p>
 </td></tr></tbody></table>
 
