--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿
+
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="Qingan Yan" content="Homepage">
 
@@ -76,15 +76,14 @@
     </span>
 </p>
 <p class="simple15"  style="padding-top:8px">
-<a href="./docs/Qingan_Yan_PhD_WHU_CV.pdf" style="font-family:verdana" class="btn btn-default btn-sm" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <b><u>Curriculum Vitae</u></b></a>&nbsp;
+<a href="./docs/qingan_yan_phd_cv_2017_12.pdf" style="font-family:verdana" class="btn btn-default btn-sm" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <b><u>Curriculum Vitae</u></b></a>&nbsp;
 </p>
 </td></tr></tbody></table>
 
 <h2>Short Bio</h2>
 <table class="imgtable"><tbody>
 <tr><td>
-    <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Santa Clara. Before that, I got my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a> in July 2017, 
-    under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
+    <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Santa Clara, California. Before that, I got my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in July 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
     <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, SLAM, image and RGBD data analysis. 
     I am also interested in the application of deep learning within 3D field, such as semantic shape understanding and scene recovery.</p>
     <p>If you are interested in collaboration with me, please feel free to send me an email at <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a>.</p>
