--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         <span style="font-family:Helvetica">
             <b>
                 Ph.D.
-                <br>Computer Vision Engineer
-                <br>JD.com Silicon Valley Research Center
+                <br>Research Engineer
+                <br>JD.com Silicon Valley Research Center, Santa Clara, CA
+                <br>
             </b>
         </span>
     </p>
@@ -92,6 +93,26 @@
 <h2>Publications</h2>
 
 <table class="imgtable"><tbody>
+    <tr>
+        <td width="20%">
+	          <img src="./figures/tvcg17_surface.jpg" width="100%<article>">&nbsp;
+        </td>
+        <td align="left">
+            <ul>
+	              <li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a> <img src="./figures/new_animated.gif" \=""></p>
+	                  <p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
+	                      <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>. (To appear in 2017)</i></p>
+                    <p style="padding-top:10px">
+	                      <a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+                    </p>
+                </li>
+            </ul>
+        </td>
+    </tr>
+</tbody>
+</table>
+
+<table class="imgtable"><tbody>
 <tr>
 <td width="20%">
 	<img src="./figures/tip17_illumination.jpg" width="100%<article>">&nbsp;
@@ -100,9 +121,9 @@
 <ul>
 	<li><p><b>Illumination Decomposition for Photograph with Multiple Light Sources</b> <img src="./figures/new_animated.gif" \=""></p>
 	<p>Ling Zhang, <b>Qingan Yan</b>, Zheng Liu, Hua Zou and Chunxia Xiao<br>
-	<i>IEEE Transactions on Image Processing <b>(TIP)</b>. (To appear in 2017) </i></p>
+	<i>IEEE Transactions on Image Processing <b>(TIP)</b>, 2017, 26(9): 4114-4127. </i></p>
 <p style="padding-top:10px">
-    <!--<a href="./docs/tip17_.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;-->
+    <a href="./docs/tip17_illumination.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
 </p>
 </li>
 </ul>
@@ -120,30 +141,10 @@
 <ul>
 	<li><p><a href="./docs/cvpr17_distinguishing.pdf" class="text-black"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></a> <img src="./figures/new_animated.gif" \=""></p>
 	<p><b>Qingan Yan</b>, Long Yang, Ling Zhang and Chunxia Xiao<br>
-	<i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2017. (Spotlight) </i></p>
+	    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2017, 3836-3844, Honolulu, USA. (Spotlight) </i></p>
 <p style="padding-top:10px">
 <a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
 <!--<a href="https://github.com/yanqingan/SfM_Disambiguation" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b> (will be released in June)</a>&nbsp;-->
-</p>
-</li>
-</ul>
-</td>
-</tr>
-</tbody>
-</table>
-
-<table class="imgtable"><tbody>
-<tr>
-<td width="20%">
-	<img src="./figures/tvcg17_surface.jpg" width="100%<article>">&nbsp;
-</td>
-<td align="left">
-<ul>
-	<li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a> <img src="./figures/new_animated.gif" \=""></p>
-	<p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
-	<i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>. (To appear in 2017)</i></p>
-<p style="padding-top:10px">
-	<a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
 </p>
 </li>
 </ul>
