--- a/index.html
+++ b/index.html
@@ -27,99 +27,99 @@
 
 <body>
 
-<div class="navbar navbar-inverse navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+    <div class="navbar navbar-inverse navbar-default navbar-fixed-top" role="nasurfacevigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse" role="navigation" font="">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html"></a></li>
+                    <li><a href="index.html"></a></li>
+                    <li><a href="index.html"></a></li>
+                    <li><a href="index.html"></a></li>
+                </ul>
+            </div><!--/.navbar-collapse -->
         </div>
-        <div class="navbar-collapse collapse" role="navigation" font="">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html"></a></li>
-            <li><a href="index.html"></a></li>
-            <li><a href="index.html"></a></li>
-            <li><a href="index.html"></a></li>
-          </ul>
-        </div><!--/.navbar-collapse -->
-      </div>
-</div>
+    </div>
 
-<div id="layout-content" style="margin-top:80px">
-<div>
-	<h2> <b>Qingan Yan</b> <span style="font-family:courier new">['tsi&#331;-&aelig;n j&aelig;n]</span></h2>
-</div>
-<table class="imgtable"><tbody>
-<tr>
-<td width="25%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
-<td align="left" style="padding-left:60px">
-    <p>
-        <span style="font-family:Helvetica">
-            <b>
-                Ph.D.
-                <br>Research Engineer
-                <br>JD.com Silicon Valley Research Center, Santa Clara, CA
-                <br>
-            </b>
-        </span>
-    </p>
-<p>
-    <span style="font-family:Helvetica">
-        <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a> | <a href="mailto:qingan.yan@jd.com">qingan.yan@jd.com</a><br>
-        <b>Office:</b> 2900 Lakeside Dr, Santa Clara, California, 95054<br>
-        <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
-        <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
-        <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
-        <br>
-    </span>
-</p>
-<p class="simple15"  style="padding-top:8px">
-<a href="./docs/qingan_yan_phd_cv_2017_12.pdf" style="font-family:verdana" class="btn btn-default btn-sm" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <b><u>Curriculum Vitae</u></b></a>&nbsp;
-</p>
-</td></tr></tbody></table>
-
-<h2>Short Bio</h2>
-<table class="imgtable"><tbody>
-<tr><td>
-    <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Santa Clara, California. Before that, I got my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in July 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
-    <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, SLAM, image and RGBD data analysis. 
-    I am also interested in the application of deep learning within 3D field, such as semantic shape understanding and scene recovery.</p>
-    <p>If you are interested in collaboration with me, please feel free to send me an email at <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a>.</p>
-</td></tr></tbody></table>
-
-<h2>Publications</h2>
-
-<table class="imgtable"><tbody>
-    <tr>
-        <td width="20%">
-	          <img src="./figures/tvcg17_surface.jpg" width="100%<article>">&nbsp;
-        </td>
-        <td align="left">
-            <ul>
-	              <li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a> <img src="./figures/new_animated.gif" \=""></p>
-	                  <p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
-	                      <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>. (To appear in 2017)</i></p>
-                    <p style="padding-top:10px">
-	                      <a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+    <div id="layout-content" style="margin-top:80px">
+        <div>
+	          <h2> <b>Qingan Yan</b> <span style="font-family:courier new">['tsi&#331;-&aelig;n j&aelig;n]</span></h2>
+        </div>
+        <table class="imgtable"><tbody>
+            <tr>
+                <td width="25%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
+                <td align="left" style="padding-left:60px">
+                    <p>
+                        <span style="font-family:Helvetica">
+                            <b>
+                                Ph.D.
+                                <br>Research Engineer
+                                <br>JD.com Silicon Valley Research Center, Santa Clara, CA
+                                <br>
+                            </b>
+                        </span>
                     </p>
-                </li>
-            </ul>
-        </td>
-    </tr>
-</tbody>
-</table>
+                    <p>
+                        <span style="font-family:Helvetica">
+                            <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a> | <a href="mailto:qingan.yan@jd.com">qingan.yan@jd.com</a><br>
+                            <b>Office:</b> 2900 Lakeside Dr, Santa Clara, California, 95054<br>
+                            <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
+                            <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
+                            <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
+                            <br>
+                        </span>
+                    </p>
+                    <p class="simple15"  style="padding-top:8px">
+                        <a href="./docs/qingan_yan_phd_cv_2017_12.pdf" style="font-family:verdana" class="btn btn-default btn-sm" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <b><u>Curriculum Vitae</u></b></a>&nbsp;
+                    </p>
+                </td></tr></tbody></table>
 
-<table class="imgtable"><tbody>
-<tr>
-<td width="20%">
-	<img src="./figures/tip17_illumination.jpg" width="100%<article>">&nbsp;
-</td>
-<td align="left">
-<ul>
-	<li><p><b>Illumination Decomposition for Photograph with Multiple Light Sources</b> <img src="./figures/new_animated.gif" \=""></p>
+        <h2>Short Bio</h2>
+        <table class="imgtable"><tbody>
+            <tr><td>
+                <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Santa Clara, California. Before that, I got my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in July 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
+                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, SLAM, image and RGBD data analysis. 
+                    I am also interested in the application of deep learning within 3D field, such as semantic shape understanding and scene recovery.</p>
+                <p>If you are interested in collaboration with me, please feel free to send me an email at <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a>.</p>
+            </td></tr></tbody></table>
+
+        <h2>Publications</h2>
+
+        <table class="imgtable"><tbody>
+            <tr>
+                <td width="20%">
+	                  <img src="./figures/tvcg17_surface.jpg" width="100%<article>">&nbsp;
+                </td>
+                <td align="left">
+                    <ul>
+	                      <li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a> <img src="./figures/new_animated.gif" \=""></p>
+	                          <p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
+	                              <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>. (To appear in 2017)</i></p>
+                            <p style="padding-top:10px">
+	                              <a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+                            </p>
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </tbody>
+        </table>
+
+        <table class="imgtable"><tbody>
+            <tr>
+                <td width="20%">
+	                  <img src="./figures/tip17_illumination.jpg" width="100%<article>">&nbsp;
+                </td>
+                <td align="left">
+                    <ul>
+	                      <li><p><a href="./docs/tip17_illumination.pdf" class="text-black"><b>Illumination Decomposition for Photograph with Multiple Light Sources</b></a> <img src="./figures/new_animated.gif" \=""></p>
 	<p>Ling Zhang, <b>Qingan Yan</b>, Zheng Liu, Hua Zou and Chunxia Xiao<br>
 	<i>IEEE Transactions on Image Processing <b>(TIP)</b>, 2017, 26(9): 4114-4127. </i></p>
 <p style="padding-top:10px">
@@ -252,7 +252,7 @@
 
 <div id="footer">
 <div id="footer-text">
-<p style="color:#527bbd">Last updated on Dec-04-2017 by Qingan Yan.</p>
+<p style="color:#527bbd">Last updated on Dec-14-2017 by Qingan Yan.</p>
 </div>
 </div>
 </div>
