--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p>
                         <span style="font-family:Helvetica">
                             <b>
-                                Research Scientist
+                                Research Engineer
                                 <br>JD.com Silicon Valley Research Center, Santa Clara, CA
                                 <br>
                             </b>
