--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p>
                         <span style="font-family:Helvetica">
                             <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a> | <a href="mailto:qingan.yan@jd.com">qingan.yan@jd.com</a><br>
-                            <b>Office:</b> Suite #230, 2900 Lakeside Dr, Santa Clara, California, 95054<br>
+                            <b>Office:</b> 2900 Lakeside Dr, Suite 230, Santa Clara, California, 95054<br>
                             <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
                             <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
                             <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
