--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
                         <span style="font-family:Helvetica">
                             <b>
                                 Research Engineer
-                                <br>JD.com Silicon Valley Research Center, Santa Clara, CA
+                                <br>JD.com Inc
                                 <br>
                             </b>
                         </span>
                     </p>
                     <p>
                         <span style="font-family:Helvetica">
-                            <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a> | <a href="mailto:qingan.yan@jd.com">qingan.yan@jd.com</a><br>
-                            <b>Office:</b> 2900 Lakeside Dr, Suite 230, Santa Clara, California, 95054<br>
+                            <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
+                            <b>Office:</b> 2900 Lakeside Dr, Suite 230, Santa Clara, California, USA, 95054<br>
                             <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
                             <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
                             <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
@@ -84,7 +84,7 @@
         <table class="imgtable"><tbody>
             <tr><td>
                 <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Santa Clara, California. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
-                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, SLAM, image and RGBD data analysis. 
+                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, SLAM, color image and RGBD data analysis. 
                     I am also interested in the application of deep learning within 3D field, such as semantic shape understanding and scene recovery.</p>
                 <p>If you are interested in collaboration with me, please feel free to send me an email at <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a>.</p>
             </td></tr></tbody></table>
@@ -100,7 +100,7 @@
                     <ul>
 	                      <li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a> <img src="./figures/new_animated.gif" \=""></p>
 	                          <p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
-	                              <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>. (To appear in 2017)</i></p>
+	                              <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>, 2018, 24(2): 1190-1203.</i></p>
                             <p style="padding-top:10px">
 	                              <a href="./docs/tvcg17_surface.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
                             </p>
@@ -140,7 +140,7 @@
 <ul>
 	<li><p><a href="./docs/cvpr17_distinguishing.pdf" class="text-black"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></a> <img src="./figures/new_animated.gif" \=""></p>
 	<p><b>Qingan Yan</b>, Long Yang, Ling Zhang and Chunxia Xiao<br>
-	    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2017, 3836-3844, Honolulu, USA. (Spotlight) </i></p>
+	    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, Honolulu, USA, 2017: 3836-3844. (Spotlight Oral) </i></p>
 <p style="padding-top:10px">
 <a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
 <!--<a href="https://github.com/yanqingan/SfM_Disambiguation" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b> (will be released in June)</a>&nbsp;-->
@@ -240,7 +240,7 @@
 <td align="left">
 <ul>
 	<li><p><b>Optical Multi-touch Point Detection Method Based on Visual Attention Model (in Chinese)</b></p>
-	<p>Yadong Wu, <b>Qingan Yan</b> and Zhiqin Liu (<i>CN102855025B, granted, Jun.17.2015</i>)</p>
+	<p>Yadong Wu, <b>Qingan Yan</b> and Zhiqin Liu (<i>CN102855025B, granted, Jun/17/2015</i>)</p>
 </li>
 
 </ul>
