--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="Qingan Yan" content="Homepage">
 
@@ -67,8 +67,8 @@
                     </p>
                     <p>
                         <span style="font-family:Helvetica">
-                            <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
-                            <b>Office:</b> 2900 Lakeside Dr, Suite 230, Santa Clara, California, USA, 95054<br>
+                            <b>Email:</b> <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a> | <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
+                            <b>Office:</b> 675E Middlefield Rd, Mountain View, CA, 94043<br>
                             <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
                             <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
                             <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
@@ -80,16 +80,39 @@
                     </p>
                 </td></tr></tbody></table>
 
-        <h2>Short Bio</h2>
+        <h2>About Me</h2>
         <table class="imgtable"><tbody>
             <tr><td>
-                <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Santa Clara, California. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
-                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, SLAM, color image and RGBD data analysis. 
+                <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, California. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
+                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, Structure from Motion, MVS and RGBD data analysis. 
                     I am also interested in the application of deep learning within 3D field, such as semantic shape understanding and scene recovery.</p>
-                <p>If you are interested in collaboration with me, please feel free to send me an email at <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a>.</p>
             </td></tr></tbody></table>
 
         <h2>Publications</h2>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="20%">
+                        <img src="./figures/cvpr18_texture.jpg" width="100%<article>">&nbsp;
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Texture Mapping for 3D Reconstruction with RGB-D Sensor</b></a> <img src="./figures/new_animated.gif" \=""></p>
+                                <p>
+                                    Yanping Fu, <b>Qingan Yan</b>, Long Yang, Jie Liao and Chunxia Xiao<br>
+                                    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, Salt Lake City, USA, 2018.</i>
+                                </p>
+                                <p style="padding-top:10px">
+                                    <a href="./docs/cvpr18_texture.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <table class="imgtable"><tbody>
             <tr>
@@ -98,7 +121,7 @@
                 </td>
                 <td align="left">
                     <ul>
-	                      <li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a> <img src="./figures/new_animated.gif" \=""></p>
+	                      <li><p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Surface Reconstruction via Fusing Sparse-Sequence of Depth Images</b></a></p>
 	                          <p>Long Yang, <b>Qingan Yan</b>, Yanping Fu and Chunxia Xiao<br>
 	                              <i>IEEE Transactions on Visualization and Computer Graphics <b>(TVCG)</b>, 2018, 24(2): 1190-1203.</i></p>
                             <p style="padding-top:10px">
@@ -118,7 +141,7 @@
                 </td>
                 <td align="left">
                     <ul>
-	                      <li><p><a href="./docs/tip17_illumination.pdf" class="text-black"><b>Illumination Decomposition for Photograph with Multiple Light Sources</b></a> <img src="./figures/new_animated.gif" \=""></p>
+	                      <li><p><a href="./docs/tip17_illumination.pdf" class="text-black"><b>Illumination Decomposition for Photograph with Multiple Light Sources</b></a></p>
 	<p>Ling Zhang, <b>Qingan Yan</b>, Zheng Liu, Hua Zou and Chunxia Xiao<br>
 	<i>IEEE Transactions on Image Processing <b>(TIP)</b>, 2017, 26(9): 4114-4127. </i></p>
 <p style="padding-top:10px">
@@ -138,7 +161,7 @@
 </td>
 <td align="left">
 <ul>
-	<li><p><a href="./docs/cvpr17_distinguishing.pdf" class="text-black"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></a> <img src="./figures/new_animated.gif" \=""></p>
+	<li><p><a href="./docs/cvpr17_distinguishing.pdf" class="text-black"><b>Distinguishing the Indistinguishable: Exploring Structural Ambiguities via Geodesic Context</b></a></p>
 	<p><b>Qingan Yan</b>, Long Yang, Ling Zhang and Chunxia Xiao<br>
 	    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, Honolulu, USA, 2017: 3836-3844. (Spotlight Oral) </i></p>
 <p style="padding-top:10px">
@@ -251,7 +274,7 @@
 
 <div id="footer">
 <div id="footer-text">
-<p style="color:#527bbd">Last updated on Dec-14-2017 by Qingan Yan.</p>
+<p style="color:#527bbd">Last updated on Apr-24-2018 by Qingan Yan.</p>
 </div>
 </div>
 </div>
