--- a/index.html
+++ b/index.html
@@ -88,6 +88,30 @@
                     I am also interested in the application of deep learning within 3D field, such as semantic shape understanding and scene recovery.</p>
             </td></tr></tbody></table>
 
+        <h2>Recent News</h2>
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <p><a>Apr. 01, 2018:</a> One paper on RGBD texture mapping accepted to CVPR 2018 .</p>
+                            </li>
+                            <li>
+                                <p><a>Nov. 07, 2017:</a> Join JD.com Inc as a computer vision scientist in Mountain View.</p>
+                            </li>
+                            <li>
+                                <p><a>May. 30, 2017:</a> One paper on illumination editing accepted to IEEE Transactions on Image Processing.</p>
+                            </li>
+                            <li>
+                                <p><a>Apr. 15, 2017:</a> One paper on structure from motion accepted to CVPR 2017.</p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
         <h2>Publications</h2>
 
         <table class="imgtable">
