--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </p>
                     <p>
                         <span style="font-family:Helvetica">
-                            <b>Email:</b> <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a> | <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a><br>
+                            <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a> | <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a><br>
                             <b>Office:</b> 675E Middlefield Rd, Mountain View, CA, 94043<br>
                             <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
                             <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
@@ -76,7 +76,7 @@
                         </span>
                     </p>
                     <p class="simple15"  style="padding-top:8px">
-                        <a href="./docs/qingan_yan_phd_cv_2018_01.pdf" style="font-family:verdana" class="btn btn-default btn-sm" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <b><u>Curriculum Vitae</u></b></a>&nbsp;
+                        <a href="./docs/qingan_yan_phd_cv_2018_04.pdf" style="font-family:verdana" class="btn btn-default btn-sm" role="button"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> <b><u>Curriculum Vitae</u></b></a>&nbsp;
                     </p>
                 </td></tr></tbody></table>
 
@@ -84,7 +84,7 @@
         <table class="imgtable"><tbody>
             <tr><td>
                 <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, California. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
-                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, Structure from Motion, MVS and RGBD data analysis. 
+                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, structure from motion, multi-view stereo and visual data analysis.
                     I am also interested in the application of deep learning within 3D field, such as semantic shape understanding and scene recovery.</p>
             </td></tr></tbody></table>
 
@@ -126,7 +126,7 @@
                                 <p><a href="./docs/tvcg17_surface.pdf" class="text-black"><b>Texture Mapping for 3D Reconstruction with RGB-D Sensor</b></a> <img src="./figures/new_animated.gif" \=""></p>
                                 <p>
                                     Yanping Fu, <b>Qingan Yan</b>, Long Yang, Jie Liao and Chunxia Xiao<br>
-                                    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, Salt Lake City, USA, 2018.</i>
+                                    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, Salt Lake City, USA, 2018: 4645-4653.</i>
                                 </p>
                                 <p style="padding-top:10px">
                                     <a href="./docs/cvpr18_texture.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
