--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 	    <i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, Honolulu, USA, 2017: 3836-3844. (Spotlight Oral) </i></p>
 <p style="padding-top:10px">
 <a href="./docs/cvpr17_distinguishing.pdf" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> <b><u>Paper</u></b></a>&nbsp;
-<!--<a href="https://github.com/yanqingan/SfM_Disambiguation" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b> (will be released in June)</a>&nbsp;-->
+<a href="https://github.com/yanqingan/SfM_Disambiguation" style="font-family:verdana" class="btn btn-sm btn-default" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> <b><u>Codes</u></b></a>&nbsp;
 </p>
 </li>
 </ul>
