--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         </div>
         <table class="imgtable"><tbody>
             <tr>
-                <td width="25%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
+                <td width="20%<article>"><img src="./figures/qay1.jpg" alt="Qingan Yan" width="100%<article>">&nbsp;</td>
                 <td align="left" style="padding-left:60px">
                     <p>
                         <span style="font-family:Helvetica">
                             <b>
                                 Research Engineer
-                                <br>JD.com Inc
+                                <br>JD.com Silicon Valley Research Center
                                 <br>
                             </b>
                         </span>
@@ -69,7 +69,8 @@
                         <span style="font-family:Helvetica">
                             <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a> | <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a><br>
                             <b>Office:</b> 675E Middlefield Rd, Mountain View, CA, 94043<br>
-                            <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">GitHub</a> |
+                            <b>Links:</b> <a href="https://github.com/yanqingan" target="_blank">GitHub</a> | 
+                            <a href="https://scholar.google.com/citations?user=EBQuyRAAAAAJ&hl=en" target="_blank">Google Scholar</a> | 
                             <a href="https://www.linkedin.com/in/yanqingan" target="_blank">LinkedIn</a> |
                             <a href="http://blog.csdn.net/yanqingan/" target="_blank">CSDN (in Chinese)</a>
                             <br>
@@ -84,8 +85,8 @@
         <table class="imgtable"><tbody>
             <tr><td>
                 <p>I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, California. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, China, in 2017, under the supervision of Prof.<a href="http://graphvision.whu.edu.cn/">Chunxia Xiao</a>.</p>
-                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in 3D reconstruction, structure from motion, multi-view stereo and visual data analysis.
-                    I am also interested in the application of deep learning within 3D field, such as semantic shape understanding and scene recovery.</p>
+                <p>My work focus on the field of computer vision and AR/VR. In particular, I tackle the challenges in structure from motion, multi-view stereo, SLAM and visual data processing.
+                    I am also interested in the application of deep learning within 3D field, such as semantic shape analysis and scene understanding. Finally, I am extremely interested in kissing and hugging my cute baby.</p>
             </td></tr></tbody></table>
 
         <h2>Recent News</h2>
@@ -94,17 +95,20 @@
                 <tr>
                     <td align="left">
                         <ul>
-                            <li>
-                                <p><a>Apr. 01, 2018:</a> One paper on RGBD texture mapping accepted to CVPR 2018 .</p>
+                        	<li>
+                                <p><b>[Sep. 10, 2018:]</b> <i>Out of box :), our <a href="https://github.com/yanqingan/SfM_Disambiguation" rel="nofollow">code</a> for CVPR 2017 paper is finally released. Please try it and cite our paper if it is useful.</i></p>
                             </li>
                             <li>
-                                <p><a>Nov. 07, 2017:</a> Join JD.com Inc as a computer vision scientist in Mountain View.</p>
+                                <p><b>[Apr. 01, 2018:]</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018.</i></p>
                             </li>
                             <li>
-                                <p><a>May. 30, 2017:</a> One paper on illumination editing accepted to IEEE Transactions on Image Processing.</p>
+                                <p><b>[Nov. 07, 2017:]</b> <i>I will join JD.com Silicon Valley Research Center as a computer vision scientist.</i></p>
                             </li>
                             <li>
-                                <p><a>Apr. 15, 2017:</a> One paper on structure from motion accepted to CVPR 2017.</p>
+                                <p><b>[May. 30, 2017:]</b> <i>The paper on illumination editing is accepted to IEEE Transactions on Image Processing.</i></p>
+                            </li>
+                            <li>
+                                <p><b>[Apr. 15, 2017:]</b> <i>Our paper on structure from motion is accepted to CVPR 2017.</i></p>
                             </li>
                         </ul>
                     </td>
@@ -288,8 +292,23 @@
 <ul>
 	<li><p><b>Optical Multi-touch Point Detection Method Based on Visual Attention Model (in Chinese)</b></p>
 	<p>Yadong Wu, <b>Qingan Yan</b> and Zhiqin Liu (<i>CN102855025B, granted, Jun/17/2015</i>)</p>
-</li>
+	</li>
 
+</ul>
+</td>
+</tr>
+</tbody>
+</table>
+
+<h2>Resources</h2>
+<table class="imgtable"><tbody>
+<tr>
+<td align="left">
+<ul>
+	<li><p><a href="https://github.com/yanqingan/SfM_Viewer" rel="nofollow"><b>SfM_Viewer Software</b></a> <br><i>A software can be used to display 3D point clouds from .out and .ply files, which are the outputs of bundler_sfm.</i></p>
+	</li>
+	<li><p><a href="https://github.com/yanqingan/Binocular_Measurer" rel="nofollow"><b>Binocular_Measurer Software</b></a> <br><i>A distance measuring software based on binocular stereo algorithm.</i></p>
+	</li>
 </ul>
 </td>
 </tr>
@@ -298,7 +317,7 @@
 
 <div id="footer">
 <div id="footer-text">
-<p style="color:#527bbd">Last updated on Apr-24-2018 by Qingan Yan.</p>
+<p style="color:#527bbd">Last updated on Sep-12-2018 by Qingan Yan.</p>
 </div>
 </div>
 </div>
